--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,15 @@
 [submodule "third_party/vscp"]
 	path = third_party/vscp
 	url = https://github.com/grodansparadis/vscp.git
+[submodule "Mustache"]
+	path = Mustache
+	url = https://github.com/kainjow/Mustache.git
+[submodule "third_party/crypto-algorithms"]
+	path = third_party/crypto-algorithms
+	url = https://github.com/B-Con/crypto-algorithms.git
+[submodule "third_party/json"]
+	path = third_party/json
+	url = https://github.com/nlohmann/json.git
+[submodule "third_party/Mustache"]
+	path = third_party/Mustache
+	url = https://github.com/kainjow/Mustache.git
