--- a/resources/vscpl2drv-websocksrv.conf
+++ b/resources/vscpl2drv-websocksrv.conf
@@ -20,21 +20,14 @@
       "out-mask" : "outgoing mask on string form",
     },
     "tls": {
-      "certificate" : "/srv/vscp/certs/websock_server.pem",
-      "certificate_chain" : "",
-      "verify_peer" : false,
-      "ca-path" : "",
-      "ca-file" : "",
-      "verify_depth" : 9,
-      "default-verify-paths" : true,
-      "cipher-list" : "DES-CBC3-SHA:AES128-SHA:AES128-GCM-SHA256",
-      "protocol-version" : 3,
-      "short-trust" : false
+      "certificate" : "/srv/vscp/certs/cert.pem",
+      "key" : "/srv/vscp/certs/key.pem",
     },
-    "max-clients" : 10,
+    "max-clients" : 100,
     "enable-ws1" : true,
     "enable-ws2" : true,
     "enable-rest" : true,
+    "enable-static" : true,
     "url-ws1" : "ws1",
     "url-ws2" : "ws2",
     "url-rest" : "rest"
