--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(gdb) vscp w/ driver",
+            "name": "(gdb) vscpd w/ driver",
             "type": "cppdbg",
             "request": "launch",
             "program": "/home/akhe/development/VSCP/vscp/build/vscpd",
@@ -22,7 +22,28 @@
                     "ignoreFailures": true
                 }
             ],
-            "preLaunchTask": "build vscpl2drv-tcpipsrv",
+            "preLaunchTask": "build vscpl2drv-websocksrv",
+            "miDebuggerPath": "/usr/bin/gdb"
+        },
+        {
+            "name": "(gdb) testapp w/ driver",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "/home/akhe/development/VSCP/vscpl2drv-websocksrv/build/testapp/testapp",
+            "args": ["-s","-c/home/akhe/development/VSCP/vscpl2drv-websocksrv/debug/linux/websocksrv.json"],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}/../vscp",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ],
+            "preLaunchTask": "build vscpl2drv-websocksrv",
             "miDebuggerPath": "/usr/bin/gdb"
         }
     ]
