--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "build vscpl2drv-tcpipsrv",
+            "label": "build vscpl2drv-websocksrv",
             "type": "shell",
             "command": "cd build; cmake .. -DCMAKE_BUILD_TYPE=Debug; make",
             "args": [],
@@ -13,7 +13,7 @@
             "problemMatcher": "$gcc"
         },
         {
-            "label": "clean & build vscpl2drv-tcpipsrv",
+            "label": "clean & build vscpl2drv-websocksrv",
             "type": "shell",
             "command": "mkdir build; cd build; rm CMakeCache.txt; cmake --clean-first .. -DCMAKE_BUILD_TYPE=Debug; make clean; make",
             "args": [],
