--- a/resources/vscpl2drv-websocksrv.conf
+++ b/resources/vscpl2drv-websocksrv.conf
@@ -9,7 +9,7 @@
         "file-log-max-files": 7,
     },    
     "auth-domain": "mydomain.com",
-    "key-file": "/var/vscp/.key",
+    "key-file": "/var/vscp/vscp.key",
     "path-users" : "/etc/vscp/websock_srv_users.json",
     "response-timeout" : 0,
     "encryption" : "none|aes128|aes192|aes256",
