--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ if(NOT DEFINED MAJOR_VERSION)
     SET(MAJOR_VERSION "1")
 endif()
 if(NOT DEFINED MINOR_VERSION)
-    SET(MINOR_VERSION "0")
+    SET(MINOR_VERSION "2")
 endif()
 if(NOT DEFINED PATCH_VERSION)
     SET(PATCH_VERSION "0")
@@ -157,7 +157,7 @@ IF(EXISTS "${CMAKE_ROOT}/Modules/CPack.cmake")
   SET(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
 
   IF(NOT DEFINED WIN32)
-    SET(CPACK_DEBIAN_PACKAGE_DEPENDS " libexpat-dev, libssl-dev libcurl4-openssl-dev")
+    SET(CPACK_DEBIAN_PACKAGE_DEPENDS " libexpat-dev, libssl-dev")
     SET(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
     SET(CPACK_DEBIAN_PACKAGE_SECTION "network")
     SET(CPACK_DEBIAN_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
