--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,6 +63,6 @@ jobs:
         sudo make install DESTDIR=AppDir
     - uses: actions/upload-artifact@v4
       with:
-        name: ${{ matrix.os }}_vscpl2drv-websocksrv_15.1.0.deb
-        path: /home/runner/work/vscpl2drv-websocksrv/vscpl2drv-websocksrv/build/vscpl2drv-websocksrv_15.1.0.deb
+        name: ${{ matrix.os }}_vscpl2drv-websocksrv_1.2.0.deb
+        path: /home/runner/work/vscpl2drv-websocksrv/vscpl2drv-websocksrv/build/vscpl2drv-websocksrv_1.2.0.deb
         retention-days: 30
