Tesing without expat

--- a/.github/workflows/cmake_cross_platform_build.yml
+++ b/.github/workflows/cmake_cross_platform_build.yml
@@ -48,7 +48,7 @@ jobs:
         git clone https://github.com/Microsoft/vcpkg.git
         cd vcpkg
         .\bootstrap-vcpkg.bat
-        .\vcpkg.exe install expat:x64-windows openssl:x64-windows
+        .\vcpkg.exe install  openssl:x64-windows
         echo "VCPKG_ROOT=${{ github.workspace }}\vcpkg" >> $env:GITHUB_ENV
         echo "CMAKE_TOOLCHAIN_FILE=${{ github.workspace }}\vcpkg\scripts\buildsystems\vcpkg.cmake" >> $env:GITHUB_ENV
 
@@ -57,16 +57,15 @@ jobs:
       if: runner.os == 'Linux'
       run: |
         sudo apt-get update
-        sudo apt-get install -y libexpat1-dev libssl-dev pandoc
+        sudo apt-get install -y  libssl-dev pandoc
 
     # macOS dependencies
     - name: Install macOS dependencies
       if: runner.os == 'macOS'
       run: |
         brew update
-        brew install openssl expat pandoc pkg-config
+        brew install openssl pandoc pkg-config
         echo "OPENSSL_ROOT_DIR=$(brew --prefix openssl)" >> $GITHUB_ENV
-        echo "EXPAT_ROOT_DIR=$(brew --prefix expat)" >> $GITHUB_ENV
         echo "PKG_CONFIG_PATH=$(brew --prefix openssl)/lib/pkgconfig:$(brew --prefix expat)/lib/pkgconfig" >> $GITHUB_ENV
 
     # Windows dependencies (non-vcpkg)
@@ -101,7 +100,6 @@ jobs:
           -DCMAKE_INSTALL_PREFIX=/usr/local \
           -DVSCP_PATH=vscp/ \
           -DOPENSSL_ROOT_DIR="$OPENSSL_ROOT_DIR" \
-          -DEXPAT_ROOT_DIR="$EXPAT_ROOT_DIR" \
           -DPKG_CONFIG_USE_CMAKE_PREFIX_PATH=ON \
           -DPkgConfig_EXECUTABLE="$(brew --prefix)/bin/pkg-config" \
           -G "${{ matrix.generator }}"
