--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,18 +69,18 @@
     },
     "cmake.configureSettings": {
         "VCPKG_TARGET_TRIPLET" : "x64-windows",
-        "CMAKE_BUILD_TYPE" : "${buildType}",
-        "CMAKE_TOOLCHAIN_FILE" : "E:/development/vcpkg/scripts/buildsystems/vcpkg.cmake"
+        "CMAKE_BUILD_TYPE" : "${buildType}"
     },
-    "cmake.generator": "Unix Makefiles",
+    "cmake.generator": "Visual Studio 17 2022",
     "cSpell.language": "sv,en",
     "C_Cpp.vcpkg.enabled": false,
-    "cmake.cmakePath": "/usr/bin/cmake",
+    "cmake.cmakePath": "cmake",
     "C_Cpp.default.cppStandard": "",
     "C_Cpp.default.cStandard": "",
     "sarif-viewer.connectToGithubCodeScanning": "off",
     "cSpell.words": [
       "authorised",
       "Hedman"
-    ]
+    ],
+    "files.autoSave": "afterDelay"
 }
