--- a/testapp/CMakeLists.txt
+++ b/testapp/CMakeLists.txt
@@ -28,6 +28,14 @@ cmake_minimum_required(VERSION 3.5)
 project(testapp LANGUAGES CXX C)
 set(PACKAGE_AUTHOR "Ake Hedman, the VSCP Project")
 
+# Force UTF-8 for MSVC to fix spdlog/fmt issues
+if(MSVC)
+    add_compile_options(/utf-8)
+    # Also set it as a global property
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /utf-8")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /utf-8")
+endif()
+
 # --- System Libraries ---
 include(GNUInstallDirs)
 
