--- a/.github/workflows/cmake_cross_platform_build.yml
+++ b/.github/workflows/cmake_cross_platform_build.yml
@@ -120,9 +120,11 @@ jobs:
       shell: powershell
       working-directory: ${{github.workspace}}/testapp/build
       run: |
+        Write-Host "VCPKG_ROOT: $env:VCPKG_ROOT"
+        Write-Host "CMAKE_TOOLCHAIN_FILE: $env:CMAKE_TOOLCHAIN_FILE"
         cmake .. `
-          -DCMAKE_BUILD_TYPE=$env:BUILD_TYPE `
-          -DCMAKE_TOOLCHAIN_FILE=$env:CMAKE_TOOLCHAIN_FILE `
+          -DCMAKE_BUILD_TYPE="$env:BUILD_TYPE" `
+          "-DCMAKE_TOOLCHAIN_FILE=$env:CMAKE_TOOLCHAIN_FILE" `
           -DVCPKG_TARGET_TRIPLET=x64-windows `
           "-DCMAKE_CXX_FLAGS=/utf-8" `
           "-DCMAKE_C_FLAGS=/utf-8" `
