Testing cross build

--- a/testapp/CMakeLists.txt
+++ b/testapp/CMakeLists.txt
@@ -28,10 +28,34 @@ cmake_minimum_required(VERSION 3.5)
 project(testapp LANGUAGES CXX C)
 set(PACKAGE_AUTHOR "Ake Hedman, the VSCP Project")
 
-# Force UTF-8 encoding for MSVC to fix spdlog/fmt Unicode issues
-if(WIN32)
-  add_compile_options(/utf-8)
-  message(STATUS "Added /utf-8 flag for MSVC")
+# Include directories
+if(CMAKE_SYSTEM_NAME STREQUAL "Windows")
+  target_include_directories(${PROJECT_NAME} PRIVATE
+    src/
+    .  # Add current directory for byteswap_compat.h
+    ../third_party/vscp/src/vscp/common/  
+    ../third_party/vscp/src/common/
+    ../third_party/json/single_include/
+    ../third_party/spdlog/include/
+    ${CMAKE_BINARY_DIR}
+    ${THREAD_INCLUDE_DIR}
+    ${LOCAL_WIN_INCLUDE}
+  )
+  
+  # Add a compile definition to use our compatibility header
+  target_compile_definitions(${PROJECT_NAME} PRIVATE 
+    BYTESWAP_H_INCLUDED  # This prevents vscphelper.h from including byteswap.h
+  )
+else()
+  target_include_directories(${PROJECT_NAME} PRIVATE
+    src/
+    ../third_party/vscp/src/vscp/common/
+    ../third_party/vscp/src/common
+    ../third_party/json/single_include/
+    ../third_party/spdlog/include/
+    ${CMAKE_BINARY_DIR}
+    ${THREAD_INCLUDE_DIR}
+  )
 endif()
 
 # --- System Libraries ---
