--- a/.github/workflows/cmake_cross_platform_build.yml
+++ b/.github/workflows/cmake_cross_platform_build.yml
@@ -1,192 +1,17 @@
-name: CMake Cross-Platform Build
-
-on: [push, pull_request]
-
-env:
-  BUILD_TYPE: Release
-
-jobs:
-  build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        include:
-          - os: ubuntu-latest
-            triplet: x64-linux
-            generator: "Unix Makefiles"
-          - os: windows-latest
-            triplet: x64-windows
-            generator: "Visual Studio 17 2022"
-          - os: macos-latest
-            triplet: x64-osx
-            generator: "Unix Makefiles"
-
-    steps:
-    - name: Checkout main repository
-      uses: actions/checkout@v4
-      with:
-        repository: grodansparadis/vscpl2drv-websocksrv
-        submodules: 'recursive' 
-
-    - name: Checkout VSCP repository
-      uses: actions/checkout@v4
-      with:
-        repository: grodansparadis/vscp
-        path: third_party/vscp
-        ref: development
-
-    # Setup vcpkg for Windows
-    - name: Setup vcpkg (Windows)
+    # Create byteswap compatibility header for Windows
+    - name: Create byteswap compatibility (Windows)
       if: runner.os == 'Windows'
-      uses: microsoft/setup-msbuild@v1.1
-
-    - name: Install vcpkg dependencies (Windows)
-      if: runner.os == 'Windows'
+      working-directory: ${{github.workspace}}/testapp
       run: |
-        git clone https://github.com/Microsoft/vcpkg.git
-        cd vcpkg
-        .\bootstrap-vcpkg.bat
-        .\vcpkg.exe install expat:x64-windows openssl:x64-windows pthreads:x64-windows dlfcn-win32:x64-windows
-        echo "VCPKG_ROOT=${{ github.workspace }}\vcpkg" >> $env:GITHUB_ENV
-        echo "CMAKE_TOOLCHAIN_FILE=${{ github.workspace }}\vcpkg\scripts\buildsystems\vcpkg.cmake" >> $env:GITHUB_ENV
-
-    # Windows dependencies (only pandoc via choco, other deps via vcpkg)
-    - name: Setup Windows dependencies
-      if: runner.os == 'Windows'
-      run: |
-        choco install pandoc
-
-    # Linux dependencies
-    - name: Install Linux dependencies
-      if: runner.os == 'Linux'
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y libexpat1-dev libssl-dev pandoc
-
-    # macOS dependencies with better path setup
-    - name: Install macOS dependencies
-      if: runner.os == 'macOS'
-      run: |
-        brew update
-        brew install openssl expat pandoc pkg-config
-        
-        # Set environment variables for CMake to find libraries
-        echo "OPENSSL_ROOT_DIR=$(brew --prefix openssl)" >> $GITHUB_ENV
-        echo "EXPAT_ROOT_DIR=$(brew --prefix expat)" >> $GITHUB_ENV
-        echo "CMAKE_PREFIX_PATH=$(brew --prefix openssl):$(brew --prefix expat):$(brew --prefix)" >> $GITHUB_ENV
-        echo "PKG_CONFIG_PATH=$(brew --prefix openssl)/lib/pkgconfig:$(brew --prefix expat)/lib/pkgconfig:$(brew --prefix)/lib/pkgconfig" >> $GITHUB_ENV
-        
-        # Additional paths for expat
-        echo "EXPAT_INCLUDE_DIR=$(brew --prefix expat)/include" >> $GITHUB_ENV
-        echo "EXPAT_LIBRARY=$(brew --prefix expat)/lib/libexpat.dylib" >> $GITHUB_ENV
-
-    - name: Create Build Environment for testapp
-      run: cmake -E make_directory ${{github.workspace}}/testapp/build
-
-    # Configure CMake for Linux (testapp)
-    - name: Configure CMake (Linux)
-      if: runner.os == 'Linux'
-      shell: bash
-      working-directory: ${{github.workspace}}/testapp/build
-      run: |
-        cmake .. \
-          -DCMAKE_BUILD_TYPE=$BUILD_TYPE \
-          -DCMAKE_INSTALL_PREFIX=/usr \
-          -G "${{ matrix.generator }}"
-
-    # Configure CMake for macOS (testapp)
-    - name: Configure CMake (macOS)
-      if: runner.os == 'macOS'
-      shell: bash
-      working-directory: ${{github.workspace}}/testapp/build
-      run: |
-        cmake .. \
-          -DCMAKE_BUILD_TYPE=$BUILD_TYPE \
-          -DCMAKE_INSTALL_PREFIX=/usr/local \
-          -DOPENSSL_ROOT_DIR="$OPENSSL_ROOT_DIR" \
-          -DEXPAT_ROOT_DIR="$EXPAT_ROOT_DIR" \
-          -DEXPAT_INCLUDE_DIR="$EXPAT_INCLUDE_DIR" \
-          -DEXPAT_LIBRARY="$EXPAT_LIBRARY" \
-          -DCMAKE_PREFIX_PATH="$CMAKE_PREFIX_PATH" \
-          -DPKG_CONFIG_USE_CMAKE_PREFIX_PATH=ON \
-          -DPkgConfig_EXECUTABLE="$(brew --prefix)/bin/pkg-config" \
-          -G "${{ matrix.generator }}"
-
-    # Configure CMake for Windows (testapp with vcpkg)
-    - name: Configure CMake (Windows)
-      if: runner.os == 'Windows'
-      shell: powershell
-      working-directory: ${{github.workspace}}/testapp/build
-      run: |
-        Write-Host "VCPKG_ROOT: $env:VCPKG_ROOT"
-        Write-Host "CMAKE_TOOLCHAIN_FILE: $env:CMAKE_TOOLCHAIN_FILE"
-        cmake .. `
-          -DCMAKE_BUILD_TYPE="$env:BUILD_TYPE" `
-          "-DCMAKE_TOOLCHAIN_FILE=$env:CMAKE_TOOLCHAIN_FILE" `
-          -DVCPKG_TARGET_TRIPLET=x64-windows `
-          "-DCMAKE_CXX_FLAGS=/utf-8" `
-          "-DCMAKE_C_FLAGS=/utf-8" `
-          -G "${{ matrix.generator }}" `
-          -A x64
-
-    # Debug: Show CMake configuration for troubleshooting
-    - name: Debug CMake configuration
-      if: failure()
-      working-directory: ${{github.workspace}}/testapp/build
-      shell: bash
-      run: |
-        echo "=== CMake Cache ==="
-        cat CMakeCache.txt || echo "No CMakeCache.txt found"
-        echo "=== CMake Error Log ==="
-        cat CMakeFiles/CMakeError.log || echo "No CMakeError.log found"
-        echo "=== CMake Output Log ==="
-        cat CMakeFiles/CMakeOutput.log || echo "No CMakeOutput.log found"
-        echo "=== Environment Variables ==="
-        env | grep -E "(CMAKE|VCPKG|OPENSSL|EXPAT|PKG_CONFIG)" || echo "No relevant env vars"
-        echo "=== Directory Contents ==="
-        ls -la .. || dir ..
-        echo "=== VSCP Directory ==="
-        ls -la ../third_party/vscp || echo "VSCP directory not found"
-
-    - name: Build testapp
-      working-directory: ${{github.workspace}}/testapp/build
-      shell: bash
-      run: cmake --build . --config $BUILD_TYPE --parallel
-
-    - name: Test testapp
-      working-directory: ${{github.workspace}}/testapp/build
-      shell: bash
-      run: ctest -C $BUILD_TYPE --output-on-failure || echo "No tests found"
-
-    # Upload testapp binary
-    - name: Upload testapp binary
-      uses: actions/upload-artifact@v4
-      with:
-        name: testapp-${{ matrix.os }}
-        path: |
-          ${{github.workspace}}/testapp/build/testapp*
-          ${{github.workspace}}/testapp/build/Release/testapp*
-          ${{github.workspace}}/testapp/build/Debug/testapp*
-        retention-days: 30
-
-  # Release job (only on tags)
-  release:
-    if: startsWith(github.ref, 'refs/tags/')
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-    - name: Download all artifacts
-      uses: actions/download-artifact@v4
-      with:
-        path: artifacts
-
-    - name: Create Release
-      uses: softprops/action-gh-release@v1
-      with:
-        files: artifacts/**/*
-        draft: false
-        prerelease: false
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        @"
+        #ifndef BYTESWAP_H
+        #define BYTESWAP_H
+        #ifdef _WIN32
+        #include <intrin.h>
+        #include <cstdint>
+        static inline uint16_t bswap_16(uint16_t x) { return _byteswap_ushort(x); }
+        static inline uint32_t bswap_32(uint32_t x) { return _byteswap_ulong(x); }
+        static inline uint64_t bswap_64(uint64_t x) { return _byteswap_uint64(x); }
+        #endif
+        #endif
+        "@ | Out-File -FilePath "byteswap.h" -Encoding UTF8
