--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,9 @@ endif()
 if(WIN32)
 add_definitions(-D_CRT_SECURE_NO_WARNINGS)
 add_definitions(-D_WINSOCK_DEPRECATED_NO_WARNINGS)
+# Ensure WIN32 is defined for the preprocessor
+add_definitions(-DWIN32)
+add_definitions(-D_WIN32)
 # Add UTF-8 support for spdlog/fmt
   add_compile_options(/utf-8)
 else()
